1992-03-12  dickey@software.org

	* src/dedtype.c:
	modified so that if user is typing the current-file (as
	opposed to help-file), then we update the filelist-line
	along with the page-size information.  do this to make it
	work better when typing a log-file.

	* src/ded.c: modified interface to 'dedtype()'

	* src/ded.h: change interface of 'dedtype()'

	* src/Makefile: use .c.a rule to avoid leaving ".o" files around

1992-02-28  dickey@software.org

	* src/dedring.c: *** empty log message ***

	* src/Makefile: use "dyn_string.h"

	* src/dedring.c: corrected save/unsave for 'cmd_sh'

	* src/deddoit.c: oops: cleared 'cmd_sh' in the wrong place

	* src/dedshow.c:
	rewrote so that I can handle arbitrarily long buffers, as
	well as to recognize the special nonascii coding for ellipsis
	used in 'deddoit.c'

	* src/dedring.c:
	changed type of 'cmd_sh' since it is now a dynamic-string

	* test/run_test.sh: add/use 'traceback.sh'

	* test/Makefile: added 'traceback.sh'

	* src/version.h:
	(except for 'dlog.c') modified so that shell commands &
	substitution are done on dynamic-strings, allowing them to
	be very long. show ellipsis if "#" substitution is longer
	than 256-chars.

	* src/deddoit.c: recoded to use dynamic strings.

	* src/ded.c, src/ded.h: changed 'cmd_sh' to a dynamic-string

	* src/dedshow.c:
	gave this a very long command & broke it: fixed by limiting
	the lines-shown.

	* src/README: afterthoughts

1992-02-28  ste_cm@software.org

	* src/README: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-27  dickey@software.org

	* Makefile: -x option of checkout is obsolete

1992-02-27  ste_cm@software.org

	* Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-02-21  dickey@software.org

	* src/README: new thot.

1992-02-20  dickey@software.org

	* src/dedring.c: collapsed trans/untrans together.
	corrected logic of 'ring_bak()', which was causing 'B'
	command to be incorrect.

1992-02-18  dickey@software.org
