@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920312
+MANIFEST for ded, version t19920320
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
